# Arcades

./: .gitignore  CMakeLists.txt  README.md  clickablelabel.cpp  clickablelabel.h  firstinitialasing.ui  firstinitialisation.cpp  firstinitialisation.h  firstinitialisation.ui  main.cpp  mainmenu.cpp  mainmenu.h  mainmenu.ui  resource.qrc  stylehelper.cpp  stylehelper.h  tictactoe.cpp  tictactoe.h  tictactoe.ui  usersmanipulation.cpp  usersmanipulation.h  usersmanipulation.ui
db/: users.db
text/: snake.txt  tetris.txt  tik-tak-toe.txt
